# Stone

./: .gitignore  CMakeLists.txt  README.md
Stone/: CMakeLists.txt  Stone.cpp  Stone.h
Stone/assets/: ground.tsx
Stone/assets/animations/: bald-walk-animation.xml  red-eye-animation.xml
Stone/assets/maps/: background.tmx  map2.tmx  midground.tmx
Stone/include/: Component.h  ComponentPool.h  Game.h  ISystem.h  Registry.h  Renderer.h  RenderingSystem.h  ST_AnimationClip.h  ST_AssetManager.h  ST_AudioEvent.h  ST_AudioEventQueue.h  ST_AudioManager.h  ST_BaseEvent.h  ST_Collision.h  ST_Component.h  ST_ComponentPool.h  ST_ComponentType.h  ST_Entity.h  ST_EventHandler.h  ST_EventManager.h  ST_EventType.h  ST_Game.h  ST_Layer.h  ST_Map.h  ST_MapManager.h  ST_MathHelper.h  ST_Registry.h  ST_RenderHelper.h  ST_Renderer.h  ST_Scene.h  ST_SceneManager.h  ST_SystemScheduler.h  ST_SystemType.h  ST_TextureManager.h  ST_Time.h  ST_Vector2D.h  ST_Window.h  Scene.h  SceneManager.h  SystemScheduler.h  (+2 more)
Stone/include/systems/: ST_AnimationSystem.h  ST_AudioSystem.h  ST_CameraSystem.h  ST_ColliderSyncSystem.h  ST_CollisionSystem.h  ST_DebugingRenderingSystem.h  ST_GameStateSystem.h  ST_HUDSystem.h  ST_HealthDamageSystem.h  ST_HealthUISyncSystem.h  ST_ISystem.h  ST_KeyboardInputSystem.h  ST_MapRenderingSystem.h  ST_MouseInputSystem.h  ST_MovementSystem.h  ST_PhysicsSystem.h  ST_PlayerAnimationSystem.h  ST_PlayerStateSystem.h  ST_PowerBarUISyncSystem.h  ST_ProjectileDestructionSystem.h  ST_ProjectileLaunchSystem.h  ST_ProjectileSpawnSystem.h  ST_RenderingSystem.h  ST_ScreenUISystem.h  ST_ShootingAngleUISyncSystem.h  ST_SpawnTimerSystem.h  ST_SystemManager.h  ST_TurnManagementSystem.h  ST_UIRenderSystem.h
Stone/src/: Game.cpp  Registry.cpp  Renderer.cpp  ST_AssetManager.cpp  ST_AudioManager.cpp  ST_EventType.cpp  ST_Game.cpp  ST_Layer.cpp  ST_Map.cpp  ST_MapManager.cpp  ST_MathHelper.cpp  ST_Registry.cpp  ST_Renderer.cpp  ST_Scene.cpp  ST_SceneManager.cpp  ST_SystemType.cpp  ST_TextureManager.cpp  ST_Vector2D.cpp  ST_Window.cpp  Scene.cpp  Window.cpp
